# hermes-pm

./: README.md  pyproject.toml  test_core.sh
.githooks/: pre-commit
src/: __init__.py  audit.py  cache.py  cli.py  install.py  lockfile.py  network.py  perf.py  project.py  resolver.py  utils.py
